Updated project files and resources

--- a/UserSystem/src/main/resources/application.properties
+++ b/UserSystem/src/main/resources/application.properties
@@ -18,6 +18,8 @@ logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.boot.autoconfigure=DEBUG
 debug=true
+server.tomcat.threads.max=200
+server.tomcat.connection-timeout=20000
 
 
 
